<resources>
    <string name="app_name">AndroidOpenGLDemo</string>

    <string name="change">切换</string>

    <string name="type_draw">绘制形体</string>
    <string name="type_texture">图片处理</string>
    <string name="type_vary">图形变换</string>
    <string name="type_camera">相机</string>
    <string name="type_animation">压缩纹理动画</string>
    <string name="type_fbo">FBO使用</string>
    <string name="type_egl">EGL后台处理图片</string>
    <string name="type_obj">3D Obj模型</string>
    <string name="type_obj2">Obj+mtl模型</string>

    <string name="pic_easy">原图</string>
    <string name="pic_half">全部处理</string>

</resources>
